fix: wrong padding for booking page on desktop

--- a/static/all.css
+++ b/static/all.css
@@ -592,7 +592,7 @@ footer{
     padding-left: 5px;
 }
 .booking__contact{
-    padding: 0px 100px 45px 100px;
+    padding: 0px 110px 45px 110px;
 }
 .booking__contact > p {
     line-height: 23px;
@@ -601,7 +601,7 @@ footer{
     padding-bottom: 24px;
 }
 .booking__payment{
-    padding: 0px 100px 11px 100px;
+    padding: 0px 110px 11px 110px;
 }
 .booking__payment > h3{
     padding-bottom: 24px;
